Fixed font pipeline

--- a/app/views/main_pages/index.html.erb
+++ b/app/views/main_pages/index.html.erb
@@ -1,4 +1,5 @@
 <% provide(:title, "Home") %>
-
-<h1>Candidate Ratings based on Progressive Questionaire</h1>
-<h2>2018 Candidate Assessment and Voter Awareness Initiative</h2>
+<div class="container">
+    <h1>Candidate Ratings based on Progressive Questionaire</h1>
+    <h2>2018 Candidate Assessment and Voter Awareness Initiative</h2>
+</div>
