--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="footer">
 <div class="row">
         <small>
-            <p>Website Property of the PCPDC</p>
+            <span>Website Property of the PCPDC</span>
             
         </small>
         
