--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -5,16 +5,13 @@
 
 <div class="top-bar" id="topmenu">
   <div class="top-bar-left">
-    <ul class="dropdown menu" data-dropdown-menu>
-      <li class="menu-text">Site Title</li>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About Us</a></li>
-    </ul>
+    <a class="menu-text">Site Title</a>
   </div>
   <div class="top-bar-right">
-    <ul class="menu">
-      <li><input type="search" placeholder="Search"></li>
-      <li><button type="button" class="button">Search</button></li>
+    <ul class="dropdown menu" data-dropdown-menu>
+      
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About Us</a></li>
     </ul>
   </div>
 </div>
