--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <link rel="manifest" href="/manifest.json" />
 <meta name="apple-mobile-web-app-capable" content="yes"></head>
 
-  <body>
+  <body id="all">
     <%= render 'layouts/head'%>
     <%= yield %>
     <%= render 'layouts/footer'%>
