--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,15 +1,14 @@
 <footer class="footer">
 <div class="row">
-        <small>
-            <span>Website Property of the PCPDC</span>
-            
-        </small>
-        
-            <ul class="menu">
-            <li><%= link_to "About",   '#' %></li>
+    <div class="small-3 columns">
+        <span>Website Property of the PCPDC</span>
+    </div>
+    <div class="small-9 columns">
+        <ul class="menu">
+            <li><%= link_to "About", about_path %></li>
             <li><%= link_to "Contact Us", '#' %></li>
-            <li><%= link_to "Terms of Service", '#' %></li>
-            </ul>
-        
+            <li><%= link_to "Terms of Service", terms_path %></li>
+        </ul>
+    </div>    
 </div>
 </footer>
