--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -8,10 +8,9 @@
     <a class="menu-text">Site Title</a>
   </div>
   <div class="top-bar-right">
-    <ul class="dropdown menu" data-dropdown-menu>
-      
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About Us</a></li>
+    <ul class="dropdown menu" data-dropdown-menu>      
+      <li><%= link_to "Home",     root_path %></li>
+      <li><%= link_to "About Us", about_path %></li>
     </ul>
   </div>
 </div>
