--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,3 +1,4 @@
+@import 'settings';
 /* Color Palette */
 $textH1: #1798CB;
 $textMain: #005D7D;
@@ -86,6 +87,8 @@ h5 {
     color: #fff;
 }
 
+
+
 /* Footer */
 
 footer {
@@ -153,3 +156,77 @@ footer {
     display: block;
     font-family: 'gotham_bookregular';
 }
+
+/* Candidate Card */
+// Source: https://designpieces.com/2012/12/social-media-colours-hex-and-rgb/
+$social-brand-facebook: #3b5998;
+$social-brand-twitter: #55acee;
+$social-brand-linkedin: #007bb5;
+$about-the-candidate-text-transform: uppercase;
+$about-the-candidate-separator-width: 5rem;
+$about-the-candidate-separator-thickness: 0.125rem;
+
+.about-the-candidate {
+  background-color: $white;
+  padding: 1rem;
+  border: 1px solid $medium-gray;
+
+  .separator-left {
+    text-align: left;
+    @include clearfix;
+
+    &::after {
+      position: relative;
+      width: $about-the-candidate-separator-width;
+      border-bottom: $about-the-candidate-separator-thickness solid $primary-color;
+      margin: 0.3rem auto 0;
+      margin-left: 0;
+    }
+  }
+
+  .candidate-title {
+    text-transform: $about-the-candidate-text-transform;
+  }
+
+  .candidate-social {
+    text-align: center;
+    margin-top: 0.7rem;
+    margin-bottom: 0.7rem;
+
+    .fa-stack {
+      display: inline-block;
+
+      &.facebook {
+        color: lighten($social-brand-facebook, 10%);
+
+        &:hover,
+        &:focus {
+          color: $social-brand-facebook;
+        }
+      }
+
+      &.twitter {
+        color: lighten($social-brand-twitter, 10%);
+
+        &:hover,
+        &:focus {
+          color: $social-brand-twitter;
+        }
+      }
+
+      &.linkedin {
+        color: lighten($social-brand-linkedin, 10%);
+
+        &:hover,
+        &:focus {
+          color: $social-brand-linkedin;
+        }
+      }
+    }
+  }
+
+  .candidate-image {
+    border: 1px solid $medium-gray;
+  }
+}
+
