--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -1,16 +1,19 @@
-<div class="title-bar" data-responsive-toggle="topmenu" data-hide-for="medium">
-  <button class="menu-icon" type="button" data-toggle="topmenu"></button>
-  <div class="title-bar-title">Menu</div>
+<div class="title-bar" data-responsive-toggle="example-menu" data-hide-for="medium">
+		<button class="menu-icon" type="button" data-toggle></button>
+		<div class="title-bar-title">Menu</div>
 </div>
 
-<div class="top-bar" id="topmenu">
-  <div class="top-bar-left">
-    <a class="menu-text">Site Title</a>
-  </div>
-  <div class="top-bar-right">
-    <ul class="dropdown menu" data-dropdown-menu>      
-      <li><%= link_to "Home",     root_path %></li>
-      <li><%= link_to "About Us", about_path %></li>
-    </ul>
-  </div>
+<div class="top-bar" id="example-menu">
+		<div class="top-bar-left">
+				<ul class="menu">
+						<%= link_to image_tag("logo.png", alt: "PCPDC Logo"),
+            root_path %>
+				</ul>
+		</div>
+		<div class="top-bar-right">
+				<ul class=" medium-horizontal vertical dropdown menu" data-responsive-menu="accordion medium-dropdown">
+						<li><%= link_to "Home",     root_path %></li>
+            <li><%= link_to "About Us", about_path %></li>
+				</ul>
+		</div>
 </div>
