--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
 
     <%= stylesheet_link_tag    "application" %>
     <%= javascript_include_tag "application", 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag :modernizr %>
     <%= csrf_meta_tags %>
   <link rel="manifest" href="/manifest.json" />
 <meta name="apple-mobile-web-app-capable" content="yes"></head>
@@ -15,6 +16,8 @@
   <body id="all">
     <%= render 'layouts/head'%>
     <%= yield %>
+    <%= render 'layouts/candidatecard'%>
+    <br>
     <%= render 'layouts/footer'%>
   </body>
 </html>
