--- a/app/views/layouts/_candidatecard.html.erb
+++ b/app/views/layouts/_candidatecard.html.erb
@@ -1,9 +1,9 @@
 <div class="row">
     
     <div class="about-the-candidate">
-        <h3 class="candidate-title">District 15</h3>
+        <h3 class="candidate-title">U.S. Senate</h3>
         <div class="row">
-            <div class="small-12 medium-4 columns">
+            <div class="small-12 medium-3 columns">
             <div class="candidate-image">
                 <img src="http://clientsdata.buco3.com/183/images/uploaded/tamikalyles_ussenate_2018.jpg">
             </div>
@@ -24,6 +24,12 @@
                 <span class="fa-stack fa-lg linkedin">
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+                </span>
+                </a>
+                <a href="#">
+                <span class="fa-stack fa-lg website">
+                    <i class="fa fa-circle fa-stack-2x"></i>
+                    <i class="fa fa-link fa-stack-1x fa-inverse"></i>
                 </span>
                 </a>
             </div>
