--- a/app/views/main_pages/index.html.erb
+++ b/app/views/main_pages/index.html.erb
@@ -29,5 +29,8 @@
         We will continue to issue reminders from time to time, and will update postings with evaluations 
         of new responses as they are received.<br><br>
         </span>
+        
     </div>
+    
 </div>
+<%= render 'layouts/candidatecard'%>
