--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -161,7 +161,7 @@ footer {
 // Source: https://designpieces.com/2012/12/social-media-colours-hex-and-rgb/
 $social-brand-facebook: #3b5998;
 $social-brand-twitter: #55acee;
-$social-brand-linkedin: #007bb5;
+$social-brand-email: #dd4b39;
 $about-the-candidate-text-transform: uppercase;
 $about-the-candidate-separator-width: 5rem;
 $about-the-candidate-separator-thickness: 0.125rem;
@@ -214,12 +214,12 @@ $about-the-candidate-separator-thickness: 0.125rem;
         }
       }
 
-      &.linkedin {
-        color: lighten($social-brand-linkedin, 10%);
+      &.email {
+        color: lighten($social-brand-email, 10%);
 
         &:hover,
         &:focus {
-          color: $social-brand-linkedin;
+          color: $social-brand-email;
         }
       }
 
