--- a/app/views/layouts/_candidatecard.html.erb
+++ b/app/views/layouts/_candidatecard.html.erb
@@ -21,9 +21,9 @@
                 </span>
                 </a>
                 <a href="#">
-                <span class="fa-stack fa-lg linkedin">
+                <span class="fa-stack fa-lg email">
                     <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+                    <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
                 </span>
                 </a>
                 <a href="#">
