--- a/app/views/layouts/_candidatecard.html.erb
+++ b/app/views/layouts/_candidatecard.html.erb
@@ -36,7 +36,12 @@
             </div>
             <div class="small-12 medium-8 columns">
             <h4 class="separator-left">Tamika Lyles</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores eum, iusto vel repudiandae, quaerat soluta sequi officia. Blanditiis atque, illo eaque sint in architecto illum nostrum repudiandae labore tenetur! Eaque impedit pariatur odio ad ipsum qui aspernatur dolorem consequuntur a molestias nisi, quae voluptatem expedita, inventore voluptatibus dolores, veritatis corporis facilis laudantium explicabo vero! Non hic quia facilis blanditiis eum.</p>
+            <ul>
+                <li id="phone-number">Phone: </li>
+                <li id="address">Address:  </li>
+                <li id="progressive-rating">Progressive Rating: </li>
+            </ul>
+            <button class="candidate-views-button">View Responses</button>
             </div>
         </div>
     </div>
