--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -1,4 +1,4 @@
-<div class="title-bar" data-responsive-toggle="example-menu" data-hide-for="medium">
+<div class="top-bar" data-responsive-toggle="example-menu" data-hide-for="medium">
 		<button class="menu-icon" type="button" data-toggle></button>
 		<div class="title-bar-title">Menu</div>
 </div>
