--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#003262">
     <%= render 'layouts/shim'%>
     <title><%= yield(:title) %> | Progressive Candidate Assessment</title>
 
