--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -1,19 +1,27 @@
-<div class="top-bar" data-responsive-toggle="example-menu" data-hide-for="medium">
-		<button class="menu-icon" type="button" data-toggle></button>
-		<div class="title-bar-title">Menu</div>
+<div class="responsive-nav-social-mobile" data-responsive-toggle="responsive-nav-social" data-hide-for="medium">
+  <div class="responsive-nav-social-mobile-left">
+    <ul class="menu">
+      <%= link_to image_tag("logo.png", alt: "PCPDC Logo"),  root_path %>
+    </ul>
+  </div>
+  <div class="responsive-nav-social-mobile-right">
+    <button class="menu-icon" type="button" data-toggle="responsive-nav-social"></button>
+  </div>
 </div>
 
-<div class="top-bar" id="example-menu">
-		<div class="top-bar-left">
-				<ul class="menu">
-						<%= link_to image_tag("logo.png", alt: "PCPDC Logo"),
-            root_path %>
-				</ul>
-		</div>
-		<div class="top-bar-right">
-				<ul class=" medium-horizontal vertical dropdown menu" data-responsive-menu="accordion medium-dropdown">
-						<li><%= link_to "Home",     root_path %></li>
-            <li><%= link_to "About Us", about_path %></li>
-				</ul>
-		</div>
+<div data-sticky-container>
+  <div class="responsive-nav-social" id="responsive-nav-social" data-sticky data-options="marginTop:0;">
+    <div class="row align-justify align-middle" id="responsive-menu">
+      <div class="responsive-nav-social-left hide-for-small-only">
+        <%= link_to image_tag("logo.png", alt: "PCPDC Logo"),  root_path %>
+      </div>
+      <div class="responsive-nav-social-right">
+        <ul class="menu vertical medium-horizontal">
+					<li><%= link_to "Home",     root_path %></li>
+					<li><%= link_to "About Us", about_path %></li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </div>
+
