--- a/app/views/layouts/_candidatecard.html.erb
+++ b/app/views/layouts/_candidatecard.html.erb
@@ -1,49 +1,1 @@
-<div class="row">
-    
-    <div class="about-the-candidate">
-        <h3 class="candidate-title">U.S. Senate</h3>
-        <div class="row">
-            <div class="small-12 medium-3 columns">
-            <div class="candidate-image">
-                <img src="http://clientsdata.buco3.com/183/images/uploaded/tamikalyles_ussenate_2018.jpg">
-            </div>
-            <div class="candidate-social">
-                <a href="#">
-                <span class="fa-stack fa-lg facebook">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-                </span>
-                </a>
-                <a href="#">
-                <span class="fa-stack fa-lg twitter">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-                </span>
-                </a>
-                <a href="#">
-                <span class="fa-stack fa-lg email">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
-                </span>
-                </a>
-                <a href="#">
-                <span class="fa-stack fa-lg website">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-link fa-stack-1x fa-inverse"></i>
-                </span>
-                </a>
-            </div>
-            </div>
-            <div class="small-12 medium-8 columns">
-            <h4 class="separator-left">Tamika Lyles</h4>
-            <ul>
-                <li id="phone-number">Phone: </li>
-                <li id="address">Address:  </li>
-                <li id="progressive-rating">Progressive Rating: </li>
-            </ul>
-            <button class="candidate-views-button">View Responses</button>
-            </div>
-        </div>
-    </div>
-</div>
-<br>
+<candidate-card></candidate-card>
