--- a/app/views/main_pages/index.html.erb
+++ b/app/views/main_pages/index.html.erb
@@ -1,5 +1,6 @@
 <% provide(:title, "Home") %>
 <div id="pageHeader">
+    <%= render 'layouts/loader'%>
     <div class="row">
         <span><h1>Candidate Ratings based on Progressive Questionaire</h1></span>
     </div>
