--- a/app/views/layouts/_candidatecard.html.erb
+++ b/app/views/layouts/_candidatecard.html.erb
@@ -1,1 +1,96 @@
 <candidate-card></candidate-card>
+
+<script>
+var transform =    {"<>":"main","class":"main","html":[
+                        {"<>":"div","class":"row","html":[
+                            {"<>":"div","class":"about-the-candidate cardTemplate","html":[
+                                {"<>":"h3","class":"race","html":"${race}"},
+                                {"<>":"div","class":"row","html":[
+                                    {"<>":"div","class":"date","hidden":"","html":""},
+                                    {"<>":"div","class":"small-12 medium-3 columns","html":[
+                                        {"<>":"div","class":"candidate-image","html":[
+                                            {"<>":"img","src":"${image}","alt":"${name}","html":""}
+                                        ]},
+                                        {"<>":"div","class":"candidate-social socialMedia","html":[
+                                            {"<>":"a","href":"${facebookURL}","class":"facebook","html":[
+                                                {"<>":"span","class":"fa-stack fa-lg facebook","html":[
+                                                    {"<>":"i","class":"fa fa-circle fa-stack-2x","html":""},
+                                                    {"<>":"i","class":"fa fa-facebook fa-stack-1x fa-inverse","html":""}
+                                                ]}
+                                            ]},
+                                            {"<>":"a","href":"${email}","class":"email","html":[
+                                                {"<>":"span","class":"fa-stack fa-lg email","html":[
+                                                    {"<>":"i","class":"fa fa-circle fa-stack-2x","html":""},
+                                                    {"<>":"i","class":"fa fa-envelope fa-stack-1x fa-inverse","html":""}
+                                                ]}
+                                            ]},
+                                            {"<>":"a","href":"${websiteURL}","class":"website","html":[
+                                                {"<>":"span","class":"fa-stack fa-lg website","html":[
+                                                    {"<>":"i","class":"fa fa-circle fa-stack-2x","html":""},
+                                                    {"<>":"i","class":"fa fa-link fa-stack-1x fa-inverse","html":""}
+                                                ]}
+                                            ]}
+                                        ]}
+                                    ]},
+                                    {"<>":"div","class":"small-12 medium-8 columns","html":[
+                                        {"<>":"h4","class":"candidate-info name","html":"${name}"},
+                                        {"<>":"ul","html":[
+                                            {"<>":"li","class":"phone-number","html":"Phone Number: ${phone}"},
+                                            {"<>":"li","class":"address","html":"Address: ${address}"},
+                                            {"<>":"li","class":"progressive-rating","html":"Progressive Rating: ${rating}"}
+                                        ]},
+                                        {"<>":"button","class":"candidate-views-button","html":"View Responses"}
+                                    ]}
+                                ]}
+                            ]}
+                        ]},
+                        {"<>":"br","html":""}
+                    ]}
+
+var data = [
+           {'race':'Florida House District 42',
+           'image':'http://clientsdata.buco3.com/183/images/uploaded/barbaracady_flh42_2018.jpg',
+           'name':'Barbara Cady',
+           'facebookURL': '#',
+           'email': 'barbara@barbaracady.com',
+           'websiteURL': 'http://www.barbaracady.com/',
+           'phone':'321 320 4388',
+           'address':'2920 Winding Trail, Kissimmee, FL 34746',
+           'rating':'Very Progressive'},
+
+           {'race':'Florida Senate District 22',
+           'image':'http://polkdemocrats.org/images/uploaded/RobertDoyel_FL41_2016.jpg',
+           'name':'Robert Doyel',
+           'facebookURL': '#',
+           'email': 'DoyelForFlorida@earthlink.net',
+           'websiteURL': 'http://robertdoyel.com/',
+           'phone':'N/A',
+           'address':'P.O. Box 897, Winter Haven, FL 33882',
+           'rating':'Very Progressive'},
+
+           {'race':'United States House District 15',
+           'image':'http://clientsdata.buco3.com/183/images/uploaded/raymondpena_uscd15_2018.jpg',
+           'name':'Raymond Pena',
+           'facebookURL': 'https://www.facebook.com/congressionaldistrict15/',
+           'email': 'raypena@raymondpenaforcongress.org',
+           'websiteURL': 'http://www.raymondpenaforcongress.org/meet-ray.html',
+           'phone':'N/A',
+           'address':'N/A',
+           'rating':'Very Progressive'},
+
+           {'race':'United States House District 17',
+           'image':'http://polkdemocrats.org/images/uploaded/BillPollardJr_USCD17_2018.jpg',
+           'name':'Bill Pollard Jr.',
+           'facebookURL': 'https://www.facebook.com/BILLPOLLARDFL17/',
+           'email': '#',
+           'websiteURL': '#',
+           'phone':'N/A',
+           'address':'P.O. Box 1124, Sebring, FL 33810',
+           'rating':'Very Progressive'}
+
+           
+];
+
+
+$(function(){ $('candidate-card').json2html(data,transform); });
+</script>
