--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,12 @@
 <meta name="apple-mobile-web-app-capable" content="yes"></head>
 
   <body id="all">
-    <%= render 'layouts/head'%>
-    <%= yield %>    
-    <%= render 'layouts/footer'%>
+    
+    
+    <div id="content">
+      <%= render 'layouts/head'%>
+      <%= yield %>    
+      <%= render 'layouts/footer'%>
+    </div>
   </body>
 </html>
