Fixed turbolinks compat. improved ui, misc. changes

--- a/app/views/layouts/_candidatecard.html.erb
+++ b/app/views/layouts/_candidatecard.html.erb
@@ -39,7 +39,7 @@ var transform =    {"<>":"main","class":"main","html":[
                                             {"<>":"li","class":"address","html":"Address: ${address}"},
                                             {"<>":"li","class":"progressive-rating","html":"Progressive Rating: ${rating}"}
                                         ]},
-                                        {"<>":"button","class":"candidate-views-button","html":"View Responses"}
+                                        {"<>":"button","class":"candidate-views-button","html":"Position Statements"}
                                     ]}
                                 ]}
                             ]}
