--- a/app/views/layouts/_loader.html.erb
+++ b/app/views/layouts/_loader.html.erb
@@ -1,4 +1,4 @@
-<div id="loader-wrapper">
+<div id="loader-wrapper" class="no-js">
     <div id="loader"></div>
     <div class="loader-section"></div>
 </div>
