--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -17,8 +17,8 @@
 @include foundation-typography;
 //@include foundation-forms;
 @include foundation-button;
-@include foundation-accordion;
-@include foundation-accordion-menu;
+//@include foundation-accordion;
+//@include foundation-accordion-menu;
 //@include foundation-badge;
 //@include foundation-breadcrumbs;
 @include foundation-button-group;
@@ -27,16 +27,16 @@
 @include foundation-close-button;
 @include foundation-menu;
 @include foundation-menu-icon;
-@include foundation-drilldown-menu;
-@include foundation-dropdown;
-@include foundation-dropdown-menu;
+//@include foundation-drilldown-menu;
+//@include foundation-dropdown;
+//@include foundation-dropdown-menu;
 @include foundation-responsive-embed;
 //@include foundation-label;
 //@include foundation-media-object;
 //@include foundation-off-canvas;
 //@include foundation-orbit;
 //@include foundation-pagination;
-@include foundation-progress-bar;
+//@include foundation-progress-bar;
 //@include foundation-slider;
 @include foundation-sticky;
 //@include foundation-reveal;
@@ -44,7 +44,7 @@
 //@include foundation-table;
 //@include foundation-tabs;
 //@include foundation-thumbnail;
-@include foundation-title-bar;
+//@include foundation-title-bar;
 //@include foundation-tooltip;
 @include foundation-top-bar;
 @include foundation-visibility-classes;
