--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#003262">
-    <%= favicon_link_tag 'favicon.ico' %>
+    <link href="/favicon.ico" rel="shortcut icon" />
     <%= render 'layouts/shim'%>
     <title><%= yield(:title) %> | Progressive Candidate Assessment</title>
 
