--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -10,7 +10,7 @@
 </div>
 
 <div data-sticky-container>
-  <div class="responsive-nav-social" id="responsive-nav-social" data-sticky data-options="marginTop:0;">
+  <div class="responsive-nav-social" id="responsive-nav-social" data-options="marginTop:0;">
     <div class="row align-justify align-middle" id="responsive-menu">
       <div class="responsive-nav-social-left hide-for-small-only" >
         <%= link_to image_tag("logo.png", alt: "PCPDC Logo"),  root_path %>
