Added basic candidate entry and user signup, began migration away from json2html

--- a/app/views/layouts/_candidatecard.html.erb
+++ b/app/views/layouts/_candidatecard.html.erb
@@ -34,12 +34,12 @@ var transform =    {"<>":"main","class":"main","html":[
                                     ]},
                                     {"<>":"div","class":"small-12 medium-8 columns","html":[
                                         {"<>":"h4","class":"candidate-info name","html":"${name}"},
+                                        {"<>":"h5","class":"progressive-rating","html":"Progressive Rating: ${rating}"},
                                         {"<>":"ul","html":[
                                             {"<>":"li","class":"phone-number","html":[
                                                 {"<>":"a","href":"tel:${phone}","html":"Phone Number: ${phone}"}
                                             ]},
-                                            {"<>":"li","class":"address","html":"Address: ${address}"},
-                                            {"<>":"li","class":"progressive-rating","html":"Progressive Rating: ${rating}"}
+                                            {"<>":"li","class":"address","html":"Address: ${address}"}                                            
                                         ]},
                                         {"<>":"button","class":"candidate-views-button","html":"Position Statements"}
                                     ]}
