--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -61,7 +61,7 @@ body {
     
 }
 
-/* Test Nav */
+/* Nav-Bar */
 
 $nav-padding: 1rem;
 $nav-text-color: white;
@@ -346,4 +346,24 @@ $about-the-candidate-separator-thickness: 0.125rem;
 
 input, textarea {
   display: block;
+}
+
+/* mixins, variables, etc. */
+
+$gray-medium-light: #eaeaea;
+
+@mixin box_sizing {
+  -moz-box-sizing:    border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing:         border-box;
+}
+
+/* miscellaneous */
+
+.debug_dump {
+  clear: both;
+  float: left;
+  width: 100%;
+  margin-top: 45px;
+  @include box_sizing;
 }
