--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,8 +5,9 @@
     </div>
     <div class="small-9 columns">
         <ul class="menu">
-            
+            <li><%= link_to "Contact Us",     new_message_path(@message) %></li>
             <li><%= link_to "Terms of Service", terms_path %></li>
+
         </ul>
     </div>    
 </div>
