--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -18,7 +18,7 @@
       <div class="responsive-nav-social-right">
         <ul class="menu vertical medium-horizontal">
 					<li><%= link_to "Home",     root_path %></li>
-          
+          <li><%= link_to "Contact Us",     new_message_path(@message) %></li>
           
 					
         </ul>
