--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -19,9 +19,12 @@
         <ul class="menu vertical medium-horizontal">
 					<li><%= link_to "Home",     root_path %></li>
           <li><%= link_to "Contact Us",     new_message_path(@message) %></li>
-          
-					
-        </ul>
+          <% if logged_in? %>
+            <li><%= link_to "Users", '#' %></li>
+            <li><%= link_to "Candidates", '#' %></li>
+            <li><%= link_to "Log out", logout_path, method: :delete %></li>
+          <% end %>
+			  </ul>
       </div>
     </div>
   </div>
