--- a/app/views/candidates/_candidateform.html.erb
+++ b/app/views/candidates/_candidateform.html.erb
@@ -27,5 +27,30 @@
 
     <%= f.label :facebook %>
     <%= f.text_field :facebook %>
+
+    <%= f.label :section1 %>
+    <%= f.text_area :section1 %>
+
+    <%= f.label :section2 %>
+    <%= f.text_area :section2 %>
+
+    <%= f.label :section3 %>
+    <%= f.text_area :section3 %>
+
+    <%= f.label :section4 %>
+    <%= f.text_area :section4 %>
+
+    <%= f.label :section5 %>
+    <%= f.text_area :section5 %>
+
+    <%= f.label :section6 %>
+    <%= f.text_area :section6 %>
+
+    <%= f.label :section7 %>
+    <%= f.text_area :section7 %>
+
+    <%= f.label :section8 %>
+    <%= f.text_area :section8 %>
+
     <%= f.submit yield(:button_text), class: "btn btn-primary" %>
 <% end %>
