--- a/app/views/candidates/show.html.erb
+++ b/app/views/candidates/show.html.erb
@@ -1,4 +1,4 @@
-
+<% provide(:title, "Candidate Responses") %>
 <main class="main"> 
   <div class="row">  
     <h1>Candidate Responses - <%= @candidate.name %></h1>
@@ -8,37 +8,37 @@
   </div>
   <div class="row"> 
     <% if @candidate.section1 %>
-        <h4>Seeking a fair, honest, and open government that works for all</h4>
+        <h4>Seeking a fair, honest, and open government that works for all:</h4>
         <p><%= @candidate.section1 %></p>
     <% end %>
   </div>
   <div class="row"> 
     <% if @candidate.section2 %>
-        <h4>Seeking broader rights and better wages for workers</h4>
+        <h4>Seeking broader rights and better wages for workers:</h4>
         <p><%= @candidate.section2 %></p>
     <% end %>
   </div>
   <div class="row"> 
     <% if @candidate.section3 %>
-        <h4>Seeking to maintain a strong economy</h4>
+        <h4>Seeking to maintain a strong economy:</h4>
         <p><%= @candidate.section3 %></p>
     <% end %>
   </div>
   <div class="row"> 
     <% if @candidate.section4 %>
-        <h4>Seeking to provide a quality public education for all children, as guaranteed by our State Constitution</h4>
+        <h4>Seeking to provide a quality public education for all children, as guaranteed by our State Constitution:</h4>
         <p><%= @candidate.section4 %></p>
     <% end %>
   </div>
   <div class="row"> 
     <% if @candidate.section5 %>
-        <h4>Seeking justice and equality for all</h4>
+        <h4>Seeking justice and equality for all:</h4>
         <p><%= @candidate.section5 %></p>
     <% end %>
   </div>
   <div class="row"> 
     <% if @candidate.section6 %>
-        <h4>Seeking recognition of the fundamental right to affordable housing, health care and retirement security</h4>
+        <h4>Seeking recognition of the fundamental right to affordable housing, health care and retirement security:</h4>
         <p><%= @candidate.section6 %></p>
     <% end %>
   </div>
@@ -50,7 +50,7 @@
   </div>
   <div class="row"> 
     <% if @candidate.section8 %>
-        <h4>Seeking a peaceful and secure world</h4>
+        <h4>Seeking a peaceful and secure world:</h4>
         <p><%= @candidate.section8 %></p>
     <% end %>
   </div>
