--- a/app/views/candidates/_candidatecard.html.erb
+++ b/app/views/candidates/_candidatecard.html.erb
@@ -40,7 +40,7 @@
                             </ul>
                             <%= link_to "View Responses",
                                 candidate_path(candidate),
-                                class: "candidate-views-button" %>
+                                class: "candidate-views-button button" %>
                         </div>
                    </div>
                 </div>
