Updated stylesheet for responses page, improved mobile styling

--- a/app/views/candidates/home.html.erb
+++ b/app/views/candidates/home.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, "Home") %>
-<div id="pageHeader">
+<div id="page">
     
     <div class="row">
         <span><h1>Candidate Ratings based on Progressive Questionaire</h1></span>
