--- a/app/views/candidates/show.html.erb
+++ b/app/views/candidates/show.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, "Candidate Responses") %>
-<main class="main"> 
+<main class="main" id="page"> 
   <div class="row">  
     <h1>Candidate Responses - <%= @candidate.name %></h1>
     <p>In addition to answering the 20 survey questions, this candidate provided the following elaboration of 
