--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,4 +1,5 @@
 @import 'settings';
+
 /* Color Palette */
 $textH1: #1798CB;
 $textMain: #005D7D;
@@ -12,8 +13,6 @@ $accent6: #DFE1DF;
 $accent7: #F1563F;
 $accent8: #62BB46;
 $accent9: #f41b49;
-
-
 
 @font-face {
     font-family: 'gotham_boldregular';
@@ -57,13 +56,7 @@ h5 {
     font-family: "gotham_bookregular";
 }
 
-/* Body */
-body {
-    
-}
-
 /* Nav-Bar */
-
 $nav-padding: 1rem;
 $nav-text-color: white;
 $nav-bg-color: $accent1;
@@ -125,8 +118,6 @@ $nav-bg-color: $accent1;
      }
 
      li {
-        
-
         &:last-of-type {
           border: 0;
        }
@@ -134,7 +125,6 @@ $nav-bg-color: $accent1;
 
      .responsive-nav-social-left {
        width: 100%;
-
        .menu.vertical a {
         justify-content: center;
        }
@@ -149,9 +139,7 @@ $nav-bg-color: $accent1;
 
   i.fa {
     font-size: 1.3rem;
-    color: $nav-text-color;
-
-       
+    color: $nav-text-color;       
   }
 }
 
@@ -159,10 +147,7 @@ $nav-bg-color: $accent1;
   width: 100%;
 }
 
-
-
 /* Footer */
-
 footer {
     a {
         color: #8c8e91;
@@ -202,13 +187,12 @@ footer {
     width: 100%;
 }
 
-/* Button */
-
-
 /* Page Content */
-#pageHeader {
+#page {
     padding-top: 2rem;
     text-align: left;
+    padding-left: .5rem;
+    padding-right: .5rem; 
     span {
         font-family: 'gotham_bookregular';
         color: #005D7D;
@@ -236,9 +220,7 @@ footer {
     font-family: 'gotham_bookregular';
 }
 
-
 /* Email Form */
-
 input, textarea {
   display: block;
   margin: 15px auto;
@@ -252,4 +234,3 @@ input, textarea {
     margin: 0 0 30px 0;
   }
 }
-
